Refactor Matrix4f benchmark
- remove unnecessary flags
- export jdk.vm.ci.amd64